fix-mobile-animations-and-desktop-mode-stuck-loading

--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ a:hover {
 }
 
 main {
-  opacity: 1;
+  opacity: 0;
   transition: 0.3s;
 }
 
